--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^18.0.0-beta-12bffc78d-20211206",
-    "react-dom": "^18.0.0-beta-12bffc78d-20211206",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/use-sync-external-store": "^0.0.3",
+    "clsx": "^1.1.1",
+    "rc-slider": "^9.7.5",
+    "react": "^18.0.0-rc.0",
+    "react-dom": "^18.0.0-rc.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "rsuite": "^5.2.4",
     "typescript": "^4.1.2",
+    "use-sync-external-store": "^1.0.0-beta-c7917fe76-20211206",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
