--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/use-sync-external-store": "^0.0.3",
     "clsx": "^1.1.1",
+    "email-validator": "^2.0.4",
+    "final-form": "^4.20.6",
     "rc-slider": "^9.7.5",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
+    "react-final-form": "^6.5.7",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "rsuite": "^5.2.4",
     "typescript": "^4.1.2",
+    "use-debounce": "^7.0.1",
     "use-sync-external-store": "^1.0.0-beta-c7917fe76-20211206",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "TAILWIND_MODE=watch craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
